--- a/src/components/PerformanceSection/PerformanceSection.css
+++ b/src/components/PerformanceSection/PerformanceSection.css
@@ -1,52 +1,123 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-  }
-  
-  .card {
-    width: 80%;
-    max-width: 550px; /* Increase the max-width */
-    height: auto;
-    background: rgb(255, 255, 255);
-    border-radius: 0.4em;
-    box-shadow: 0.3em 0.3em 0.7em #00000015;
-    transition: border 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    border: rgb(250, 250, 250) 0.2em solid;
-    margin-bottom: 20px; /* Add space between card and text */
-  }
-  
-  .card img {
-    width: 100%;
-    height: auto; /* Automatically adjust height */
-    object-fit: cover;
-    border-radius: 0.4em;
-  }
-  
+:root {
+  --container-width: 100%;
+  --card-max-width: 800px; /* Adjust this value as needed */
+}
+
+.container-performance {
+  width: 100%;
+  max-width: var(--container-width);
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+  margin-top: 2%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container-result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 40px;
+  gap: 20px;
+  justify-content: space-between;
+}
+
+img {
+  width: 100%;
+  max-width: var(--card-max-width); /* Use the variable for max-width */
+  height: auto;
+  object-fit: cover;
+  transition: transform 0.3s ease-in-out;
+  margin-top: 10px;
+}
+
+img {
+  transform: scale(1.05);
+}
+
+.text {
+  width: 60%;
+  max-width: 60%;
+  text-align: top;
+  font-family: 'Montserrat';
+  font-size: 1.2rem;
+  line-height: 1.6;
+  color: var(--primary-color);
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 0.4em;
+  transition: transform 0.3s ease-in-out;
+  font-size: 100%;
+  margin-left: 5%; 
+}
+
+.text h2 {
+  margin-bottom: 10px;
+  font-size: 1.5rem;
+  text-align: left;
+}
+
+.text h4 {
+  margin-top: 20px;
+  font-size: 1rem;
+}
+
+@media (min-width: 768px) {
   .text {
-    width: 80%;
-    max-width: 300px;
-    text-align: center;
+    padding: 20px 40px; /* Increase padding on larger screens */
   }
-  
-  .text h2 {
-    margin-bottom: 10px;
-    font-size: 1.5rem; /* Adjust font size for responsiveness */
+}
+
+
+.accuracy h4,
+.accuracy p {
+  display: flex;
+  width: 100%;
+}
+
+.image-container {
+  text-align: center;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+}
+
+.image-container:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+}
+
+.image-container h3 {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.image-container img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+
+@media (min-width: 768px) {
+  :root {
+    --container-width: 90%;
+    --card-max-width: 600px;
   }
-  
-  .text h4 {
-    margin-top: 20px; /* Add space between accuracy and f1 score */
+
+
+  .container-result {
+    flex-direction: row;
+    justify-content: space-around;
   }
-  
-  @media (min-width: 768px) {
-    .container {
-      flex-direction: row;
-      justify-content: space-around; /* Center elements horizontally */
-    }
-  
-    .text {
-      text-align: left; /* Align text to the left on larger screens */
-    }
+
+  img {
+    max-width: 100%; /* Set the maximum width of the image to 100% */
+    height: auto; /* Maintain the aspect ratio */
   }
-  
+}
