--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -1,7 +1,7 @@
-.container {
+.containerBack {
   display: flex;
-  flex-wrap: wrap; /* Allow items to wrap to the next line */
   justify-content: space-between;
+  flex-wrap: wrap; /* Allow items to wrap to the next line */
   padding: 20px;
   position: relative;
   height: 70vh;
@@ -14,6 +14,7 @@
   display: flex;
   justify-content: flex-end;
   max-width: 50%; /* Take up to 50% of the container width */
+  height: 100%;
 }
 
 .left-section {
@@ -71,8 +72,8 @@
 }
 
 .container .img {
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 20%;
   object-fit: cover;
   border-radius: 20px; /* Adjust border radius as needed */
 }
