--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,7 +1,7 @@
 .container {
   height: 294px;
   width: 240px;
-  color: red;
+  color: #f1ecec;
   perspective: 800px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -9,11 +9,12 @@
 .card {
   width: 100%;
   height: 100%;
-  background: black;
+  background: rgb(14, 14, 26);
   border-radius: 2rem;
   position: relative;
   transition: transform 1500ms;
   transform-style: preserve-3d;
+  
 }
 
 .card-top {
@@ -28,7 +29,7 @@
   top: 0;
   border-top: none;
   border-radius: 0 0 1rem 1rem;
-  box-shadow: 0px 0px 10px 5px rgba(255, 0, 0, 0.7);
+  box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.7);
 }
 
 .card-top-para {
@@ -46,7 +47,7 @@
   height: 100%;
   width: 100%;
   border-radius: 2rem;
-  box-shadow: 0px 0px 10px 5px rgba(255, 0, 0, 0.7);
+  box-shadow: 0px 0px 10px 5px #73d4ac;
   position: absolute;
   backface-visibility: hidden;
   display: flex;
@@ -57,7 +58,7 @@
 }
 
 .back {
-  background-color: black;
+  background-color: rgb(235, 175, 234);
   transform: rotateX(180deg) rotateZ(-180deg);
 }
 
@@ -79,6 +80,7 @@
 }
 
 .containercard{
-  margin-top: 100%;
+  margin-top: 10%;
   width: 100%;
+  margin-bottom: 20%;
 }
