--- a/src/components/VisualizationSection/VisualizationSection.css
+++ b/src/components/VisualizationSection/VisualizationSection.css
@@ -7,6 +7,7 @@
     margin-top: 40px;
     text-align: center;
     animation: fadeInUp 0.5s ease;
+    margin-bottom: 20%;
   }
   .container-visualization h2 {
     font-size: 40px; /* Set the font size */
